@@ -9,6 +9,7 @@ e17 (0.19.1-0.1) UNRELEASED; urgency=medium
   * Invoke dh_install with "--list-missing" option.
   * Menu file renamed to e-applications.menu.
   * Ship usr/include/enlightenment/e_client.x.
+  * configure with --disable-silent-rules.
 
  -- Andreas Metzler <ametzler@debian.org>  Sat, 13 Dec 2014 15:31:26 +0100
 
